//
// Created by Jakub Indrák on 06.05.2024.
//

#ifndef RETURNVALUE_H
#define RETURNVALUE_H


struct ReturnValue {
    bool isReturn;
    double value;
};

#endif //RETURNVALUE_H
